# listen-wiseer

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-run.sh  pyproject.toml  pyrightconfig.json  requirements.txt  setup.sh
.claude/: settings.json
.claude/commands/: clean_memory.md  end_session.md  execute.md  insights.md  pipeline.md  plan-review.md  plan.md  quick-commit.md  research.md  review.md  start_session.md
.claude/docs/: CHANGELOG.md  README.md  SESSION.md  ttd.md
.claude/docs/plans/: 2026-07-17-review-sweep.md  phase3_agent_chainlit.md  phase3c_agent_chainlit.md  phase3d_agent_chainlit.md  phase4_memory.md  phase4_rag.md  phase4b_memory.md  phase5_eval.md  phase5a_rag_intent.md  phase5c_eval.md  phase6_refactor.md  phase7a-exploration-tools.md  phase7b-intent-refactor-ux.md  phase7c-memory-genre-polish.md  phase8-rag-rightsize-agentic-search.md
.claude/docs/research/: peer-repos.md  spotify-folder-repos.md
.claude/docs/reviews/: phase8-rag-rightsize-agentic-search.md
.claude/hooks/: sdk_lint.sh  test_coverage.sh
.claude/memory/: MEMORY.md  feedback_docs_location.md  project_listen_wiseer.md  user_profile.md
.claude/skills/: code_pr.md  code_review.md  review_validate_plan.md
.claude/skills/code-test/: SKILL.md
.claude/skills/pipeline/: SKILL.md
.claude/skills/rag-research/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/cache/: corpus_features.parquet
data/config/: playlist_status.toml
evals/: run_agent_eval.py  run_local_eval.py
evals/agent/: cost_gate.py  graders.py  intent_eval.py  trajectory_eval.py
evals/datasets/: golden_intent.jsonl
evals/graders/: answer_eval.py
evals/metrics/: retrieval_eval.py
evals/tasks/: extract_golden.py  generate_synthetic.py  models.py  tracing.py
infrastructure/containers/: docker-compose.yml
infrastructure/containers/app/: Dockerfile
infrastructure/containers/mcp/: Dockerfile
infrastructure/db/: listen_wiseer.db
models/metrics/: compare_lgbm_vs_catboost_20260405_155516.jsonl  compare_lgbm_vs_catboost_20260405_155546.jsonl  compare_lgbm_vs_catboost_20260405_155547.jsonl  compare_lgbm_vs_catboost_20260405_163523.jsonl  compare_lgbm_vs_catboost_20260405_163524.jsonl  compare_lgbm_vs_catboost_20260405_163708.jsonl  compare_lgbm_vs_catboost_20260405_170954.jsonl  compare_lgbm_vs_catboost_20260405_171710.jsonl  compare_lgbm_vs_catboost_20260405_172336.jsonl  compare_lgbm_vs_catboost_20260405_200713.jsonl  compare_lgbm_vs_catboost_20260405_203253.jsonl  compare_lgbm_vs_catboost_20260405_204508.jsonl  compare_lgbm_vs_catboost_20260405_204535.jsonl  compare_lgbm_vs_catboost_20260405_204536.jsonl  compare_lgbm_vs_catboost_20260405_204611.jsonl  compare_lgbm_vs_catboost_20260405_204612.jsonl  compare_lgbm_vs_catboost_20260406_085744.jsonl  compare_lgbm_vs_catboost_20260406_085745.jsonl  train_lightgbm_20260405_152511.jsonl
notebooks/: 00_test_functions.ipynb  01_corpus_health.ipynb  02_explore_library.ipynb  03_feature_engineering.ipynb  04_genre_clustering.ipynb  05_retrieval_diagnostics.ipynb  06_model_comparison.ipynb  07_rerank_audit.ipynb  08_sync.ipynb
notebooks/eda/: 00_test_functions.ipynb  01_corpus_health.ipynb  02_explore_library.ipynb  03_feature_engineering.ipynb  04_genre_clustering.ipynb  05_retrieval_diagnostics.ipynb  06_model_comparison.ipynb
notebooks/old/: artist_eda.ipynb  classifiers.ipynb  clustering.ipynb  data_eda.ipynb  data_refresh.ipynb  eda.ipynb  genre_clustering.ipynb  genre_eda.ipynb  playlist_eda.ipynb  sync_preview.ipynb
src/: Makefile  app.py  app_old.py  config.py  const.py  data.py  datasets.py  logger.py  paths.py  preprocessing.py  uvicorn-logger.yml
src/agent/: dependencies.py  graph.py  graph_nodes.py  memory_helpers.py  memory_store.py  nodes.py  optimizer.py  response.py  state.py  tools.py  validation.py
src/agent/tools/: __init__.py  memory.py  recommend.py  spotify_read.py  spotify_write.py  web_search.py
src/analysis/: data.py  eda.py  genre.py  genre_map_review.csv  plotting.py
src/analysis/acoustic/: outlier_df.csv
src/analysis/dance/: outlier_df.csv
src/analysis/output/: genre_map_review.csv  outlier_df.csv
src/api/: data.py  fun.py  playlists.py  playlists_old.py  spotify_client.py
src/api/data/: features.py  playlists.py  schema.py
src/app/: main.py
src/etl/: bootstrap.py  db.py  genre_tables.py  lastfm.py  loader.py  sync.py
src/mcp_server/: server.py
src/modeling/: const.py  data.py  datasets.py  eda.py  pipelines.py  plotting.py  preprocessing.py
src/modeling/models/: classifiers.py  clustering.py  cosine.py  euclidean.py  kmeans.py  schema.py  settings.py
src/modeling/utils/: const.py  plotting.py
src/models/: classifiers.py  clustering.py  cosine.py  euclidean.py  kmeans.py
src/rag_core/: registry.py
src/rag_core/generation/: generator.py
src/rag_core/orchestration/: graph.py  music_rag.py  query_understanding.py  router.py
src/rag_core/preprocessing/: chunker.py  chunker_full.py  fetchers.py  indexer_full.py  parsing.py  pipeline.py
src/rag_core/retrieval/: chroma_client.py  client.py  duckdb_client.py  embedder.py  reranker.py  scoring.py
src/rag_core/schemas/: chunks.py  conversation.py  retrieval.py
src/rag_core/storage/: __init__.py  (+2 more)
src/recommend/: engine.py  pipelines.py  preprocessing.py  schemas.py  train.py
src/spotify/: auth.py  client.py  fetch.py  playback.py  write.py
src/utils/: config.py  const.py  exceptions.py  langfuse_tracing.py  logger.py  logging.py  schemas.py  tracing.py
tests/: conftest.py
tests/integration/: conftest.py  test_mcp_recommend.py  test_mcp_write.py
tests/unit/: conftest.py  test_data_loader.py  test_data_schemas.py  test_exceptions.py  test_fetch_exploration.py  test_lastfm.py  test_mcp_recommend.py  test_memory_store.py  test_preprocessing.py  test_spotify_client.py  test_sync.py
(+70 files in other folders)
