[project]
name = "listen-wiseer"
version = "0.2.0"
description = "Intelligent Spotify music recommendation system with LangGraph agents, similarity models, and Wikipedia RAG"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Core data processing
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    # LangGraph and LangChain ecosystem
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-anthropic>=0.1.0",
    # LLM providers
    "anthropic>=0.25.0",
    # Wikipedia and RAG (rag_core/ suspended in Phase 6 — replaced by web search)
    "wikipedia>=1.4.0",
    "sentence-transformers>=2.7.0",
    # Web search
    "tavily-python>=0.5.0",
    # ML and similarity
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "yellowbrick>=1.5.0",
    # MCP server
    "mcp>=1.0.0",
    # Web interface
    "chainlit>=1.0.0",
    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Observability and logging
    "structlog>=24.0.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    # Jaeger now receives traces via OTLP — exporter-jaeger was deprecated at 1.21.0
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation>=0.44.0",
    # HTTP and async
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    # Utilities
    "rich>=13.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "duckdb>=1.5.0",
    "lightgbm>=4.3.0",
    "gensim>=4.4.0",
    "catboost>=1.2.10",
    "imbalanced-learn>=0.14.1",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-checkpoint-redis>=0.4.0",
    "psycopg[binary]>=3.3.4",
    "langmem>=0.0.30",
    # Eval & observability
    "langfuse>=2.0.0",
    "ragas>=0.2.0",
    "deepeval>=1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",

    # Code quality
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.7.0",

    # Type stubs
    "types-pyyaml>=6.0.0",

    # Jupyter for exploration
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.7.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pyright>=1.1.408",
    "pytest-timeout>=2.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit security
]
ignore = [
    "E501",  # line too long (handled by ruff-format)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101", "S105", "S106"]  # allow assert and hardcoded passwords in tests
"notebooks/**" = ["ALL"]
"*.ipynb" = ["ALL"]
"src/**/storage/*.py" = ["S608"]  # SQL templates use only literal column names, no user input interpolated

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--asyncio-mode=auto",
]
markers = [
    "integration: requires external resources (DuckDB file, Spotify, Redis)",
    "slow: tests that take >5s",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
